# result

./: .gitmodules  CMakeLists.txt
include/result/: result.h
tests/: CMakeLists.txt  result.cpp
